fix(calendar): move current to clipped text

--- a/src/less/calendar/calendar.less
+++ b/src/less/calendar/calendar.less
@@ -108,9 +108,10 @@
  *** DAYS ***
  ************/
 
+.calendar__month td:not(.calendar__cell--selected) > [aria-current="date"]:not(:disabled),
 .calendar__month
-    td[aria-current="date"]:not(.calendar__cell--selected)
-    > :not(:disabled, .calendar__cell--disabled) {
+    td:not(.calendar__cell--selected)
+    > .calendar__cell--current:not(.calendar__cell--disabled) {
     .border-color-token(calendar-day-today-border-color, color-foreground-primary);
     border-style: solid;
 }
